fixing alignment

--- a/css/trashTalk.css
+++ b/css/trashTalk.css
@@ -19,7 +19,6 @@ h1 {
   font-size: large;
   width: 180px;
   padding: 0% 3% 0 5%;
-  padding-left: 125px;
   color: inherit;
   text-align: center;
 }
@@ -118,12 +117,10 @@ form.search button:hover {
  .active{
   border-bottom: 5px solid rgba(70, 168, 24, 0.57);
 }
-
  /* Column alighment for shelf life search */
 .column.left2 {
   width: 21%;
 }
-
 .shelf_life_search{
   padding: 10px;
   height: 400px;
